Configuration de départ du projet fait

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "JV3_EffetsSpeciaux.sln"
+    "dotnet.defaultSolution": "JV3_Effets.sln"
 }
